# avr-learning

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  avr.toolchain.cmake
avr/: CMakeLists.txt
avr/avrtools/: CMakeLists.txt
avr/avrtools/include/avrtools/: speaker.h  usart.h
avr/avrtools/src/: button.c  usart.c
avr/bit_showoff/: CMakeLists.txt
avr/blinker/: lib.c  main.c
avr/button/: CMakeLists.txt  main.c
avr/buzzer/: CMakeLists.txt
avr/cap_sense/: CMakeLists.txt  main.c  pins.h
avr/cyclon_eye/: main.cpp
avr/debouncer/: CMakeLists.txt
avr/hello_interrupt/: CMakeLists.txt  main.c  pins.h
avr/ldr_plotter/: CMakeLists.txt  main.c  pins.h
avr/light_sensor/: CMakeLists.txt  main.c
avr/music_box/: CMakeLists.txt  main.c
avr/night_light/: CMakeLists.txt  main.c  pins.h
avr/piezo_pressure_sensor_plotter/: CMakeLists.txt  main.c  pins.h
avr/reaction_timer/: CMakeLists.txt  main.c  pins.h  support.c  support.h
avr/serial_loopback/: CMakeLists.txt
avr/serial_organ/: organ.c  organ.h
avr/timer_audio/: CMakeLists.txt  main.c  pins.h
avr/usart_audio_recorder/: CMakeLists.txt  main.c  pins.h
avrtools/include/avrtools/: button.h  usart.h
avrtools/src/: speaker.c  usart.c
bit_showoff/: main.c
blinker/: CMakeLists.txt  lib.h
button/: pins.h
buzzer/: main.c
cyclon_eye/: CMakeLists.txt
debouncer/: main.c  pins.h
lib/blink/: CMakeLists.txt  blink.c  blink.h
light_sensor/: main.c
pc/: CMakeLists.txt
pc/usart_audio_reciever/: CMakeLists.txt  reciever.cpp
pov_toy/: CMakeLists.txt  main.c
serial_loopback/: main.c
serial_organ/: CMakeLists.txt  main.c  pins.h
src/: main.c
usart_audio_recorder/: CMakeLists.txt  main.c
